create admin done

--- a/client/admin/index.html
+++ b/client/admin/index.html
@@ -12,11 +12,11 @@
     <div class="container right-panel-active">
         <!-- Sign Up -->
         <div class="container__form container--signup">
-            <form action="#" class="form" id="form1">
+            <form action="https://alpha-system.onrender.com/api/admin" method="POST" class="form" id="form1">
                 <h2 class="form__title">Sign Up</h2>
                 <input type="text" placeholder="Username" name="username" class="input" />
                 <input type="password" placeholder="Password" name="password" class="input" />
-                <button class="btn">Sign Up</button>
+                <button type="submit" class="btn">Sign Up</button>
             </form>
         </div>
 
@@ -42,6 +42,15 @@
                 </div>
             </div>
         </div>
+
+
+        <!-- Error Screen -->
+        <div class="error">
+            <div class="close">&#10006</div>
+            <div class="errorMessage"></div>
+        </div>
+        <!-- Error Screen ends here -->
+
     </div>
 
 
