--- a/client/admin/index.html
+++ b/client/admin/index.html
@@ -12,7 +12,7 @@
     <div class="container right-panel-active">
         <!-- Sign Up -->
         <div class="container__form container--signup">
-            <form action="https://alpha-system.onrender.com/api/admin" method="POST" class="form" id="form1">
+            <form action="#" class="form" id="form1">
                 <h2 class="form__title">Sign Up</h2>
                 <input type="text" placeholder="Username" name="username" class="input" />
                 <input type="password" placeholder="Password" name="password" class="input" />
@@ -55,7 +55,7 @@
 
 
 
-    <script src="js/index.js"></script>
+    <script type="module" src="js/index.js"></script>
 </body>
 
 </html>
