--- a/client/admin/index.html
+++ b/client/admin/index.html
@@ -27,7 +27,7 @@
                 <input type="text" placeholder="Username" name="username" class="input" />
                 <input type="password" placeholder="Password" name="password" class="input" />
                 <a href="#" class="link">Forgot your password?</a>
-                <button class="btn">Sign In</button>
+                <button type="submit" class="btn">Sign In</button>
             </form>
         </div>
 
