admin dashboard working

--- a/client/admin/pages/dashboard.html
+++ b/client/admin/pages/dashboard.html
@@ -15,30 +15,19 @@
                 <a href=""></a>
             </div>
             <ul>
-                <li><a href="#dashboard" id="targeted">dashboard</a></li>
-                <li><a href="#posts">posts</a></li>
-                <li><a href="#media">media</a></li>
-                <li><a href="#pages">pages</a></li>
-                <li><a href="#links">links</a></li>
-                <li><a href="#comments">comments</a></li>
-                <li><a href="#widgets">widgets</a></li>
-                <li><a href="#plugins">plugins</a></li>
-                <li><a href="#users">users</a></li>
-                <li><a href="#tools">tools</a></li>
-                <li><a href="#settings">settings</a></li>
+                <li><a href="#dashboard" id="targeted">dashboard <i class="fa-solid fa-gauge-high"></i></a></li>
+                <li><a href="#users">users <i class="fa-solid fa-users"></i></a></li>
+                <li><a href="#daily">daily tasks <i class="fa-solid fa-list-check"></i></a></li>
+                <li><a href="#achievements">achievements <i class="fa-solid fa-trophy"></i></a></li>
+                <li><a href="#jobs">classes <i class="fa-solid fa-user-doctor"></i></a></li>
+                <li><a href="#skills">skills <i class="fa-solid fa-book-skull"></i></a></li>
+                <li><a href="#stats">stats <i class="fa-solid fa-heart"></i></a></li>
             </ul>
         </div>
         <div class="main">
-            <ul class="topbar clearfix">
-                <li><a href="#">q</a></li>
-                <li><a href="#">p</a></li>
-                <li><a href="#">o</a></li>
-                <li><a href="#">f</a></li>
-                <li><a href="#">n</a></li>
-            </ul>
             <div class="mainContent clearfix">
                 <div id="dashboard">
-                    <h2 class="header"><span class="icon"></span>Dashboard</h2>
+                    <h2 class="header">Dashboard</h2>
                     <div class="monitor">
                         <h4>Right Now</h4>
                         <div class="clearfix">
@@ -71,9 +60,26 @@
                         </form>
                     </div>
                 </div>
-                <div id="posts">
-                    <h2 class="header">posts</h2>
+                <!-- Users Tab -->
+                <div id="users">
+                    <h2 class="header">Users</h2>
+                    <div class="userList">
+                        <table>
+                            <thead>
+                                <tr>
+                                    <td>Full Name</td>
+                                    <td>Username</td>
+                                    <td>Status</td>
+                                    <td>Edit/Delete</td>
+                                </tr>
+                            </thead>
+
+                            <tbody>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
+                <!-- Users Tab ends here -->
                 <div id="media">
                     <h2 class="header">media</h2>
                 </div>
@@ -91,9 +97,6 @@
                 </div>
                 <div id="plugins">
                     <h2 class="header">plugins</h2>
-                </div>
-                <div id="users">
-                    <h2 class="header">users</h2>
                 </div>
                 <div id="tools">
                     <h2 class="header">tools</h2>
