--- a/client/admin/pages/dashboard.html
+++ b/client/admin/pages/dashboard.html
@@ -69,6 +69,7 @@
                                 <tr>
                                     <td>Full Name</td>
                                     <td>Username</td>
+                                    <td>Level</td>
                                     <td>Status</td>
                                     <td>Edit/Delete</td>
                                 </tr>
