error handler util

--- a/client/admin/pages/dashboard.html
+++ b/client/admin/pages/dashboard.html
@@ -116,6 +116,19 @@
     </div>
 
 
+    <!-- Error Screen -->
+    <div class="error">
+        <div class="close">&#10006</div>
+        <div class="errorMessage"></div>
+    </div>
+    <!-- Error Screen ends here -->
+
+    <div class="confirmBox">
+        <div class="close">&#10006</div>
+        <div class="message"></div>
+    </div>
+
+
     <script type="module" src="../js/dashboard.js"></script>
     <script src="https://kit.fontawesome.com/8e0a766b60.js" crossorigin="anonymous"></script>
 </body>
