confirm box + Users managemenet completed

--- a/client/admin/pages/dashboard.html
+++ b/client/admin/pages/dashboard.html
@@ -124,8 +124,11 @@
     <!-- Error Screen ends here -->
 
     <div class="confirmBox">
-        <div class="close">&#10006</div>
         <div class="message"></div>
+        <div class="options">
+            <button type="button" class="yesOption">Yes</button>
+            <button type="button" class="noOption">No</button>
+        </div>
     </div>
 
 
