get user module

--- a/client/admin/pages/dashboard.html
+++ b/client/admin/pages/dashboard.html
@@ -81,12 +81,32 @@
                     </div>
                 </div>
                 <!-- Users Tab ends here -->
-                <div id="media">
-                    <h2 class="header">media</h2>
+
+                <!-- Daily Tasks Tab -->
+                <div id="daily">
+                    <h2 class="header">Daily Tasks</h2>
+                    <div class="taskList">
+                        <table>
+                            <thead>
+                                <tr>
+                                    <td>Task</td>
+                                    <td>Reward</td>
+                                    <td>Penalty</td>
+                                    <td>Time Limit</td>
+                                    <td>Status</td>
+                                    <td>Edit/Delete</td>
+                                </tr>
+                            </thead>
+    
+                            <tbody>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
-                <div id="pages">
-                    <h2 class="header">pages</h2>
-                </div>
+                <!-- Daily Tasks Tab ends here -->
+
+                <div id="pages"></div>
+
                 <div id="links">
                     <h2 class="header">links</h2>
                 </div>
