working on getTasks module

--- a/client/admin/pages/dashboard.html
+++ b/client/admin/pages/dashboard.html
@@ -64,7 +64,7 @@
                 <div id="users">
                     <h2 class="header">Users</h2>
                     <div class="userList">
-                        <table>
+                        <table id="users-table">
                             <thead>
                                 <tr>
                                     <td>Full Name</td>
@@ -86,7 +86,7 @@
                 <div id="daily">
                     <h2 class="header">Daily Tasks</h2>
                     <div class="taskList">
-                        <table>
+                        <table id="tasks-table">
                             <thead>
                                 <tr>
                                     <td>Task</td>
