getTasks module completed and getUsers module bug fix

--- a/client/admin/pages/dashboard.html
+++ b/client/admin/pages/dashboard.html
@@ -67,6 +67,7 @@
                         <table id="users-table">
                             <thead>
                                 <tr>
+                                    <td>Sr. No.</td>
                                     <td>Full Name</td>
                                     <td>Username</td>
                                     <td>Level</td>
@@ -75,7 +76,7 @@
                                 </tr>
                             </thead>
 
-                            <tbody>
+                            <tbody id="users-tbody">
                             </tbody>
                         </table>
                     </div>
@@ -93,12 +94,11 @@
                                     <td>Reward</td>
                                     <td>Penalty</td>
                                     <td>Time Limit</td>
-                                    <td>Status</td>
                                     <td>Edit/Delete</td>
                                 </tr>
                             </thead>
     
-                            <tbody>
+                            <tbody id="tasks-tbody">
                             </tbody>
                         </table>
                     </div>
